# GI-TeamSelector

./: README.md
Genshin-Impact-Team-Selector/: CMakeLists.txt
Genshin-Impact-Team-Selector/CODE_LIBRARY/: CMakeLists.txt
Genshin-Impact-Team-Selector/CODE_LIBRARY/INCLUDE/: genshinimpact_character.h  genshinimpact_common_enums.h  genshinimpact_playerbox.h  genshinimpact_team.h  genshinimpact_teammanager.h
Genshin-Impact-Team-Selector/CODE_LIBRARY/SRC_CPP/: genshinimpact_character.cpp  genshinimpact_common_enums.cpp  genshinimpact_playerbox.cpp  genshinimpact_team.cpp
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/: CMakeLists.txt
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CONSOLE_DISPLAY/: CMakeLists.txt
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CONSOLE_DISPLAY/INCLUDE/: tools_io_consoleio.h
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CONSOLE_DISPLAY/SRC_CPP/: tools_io_consoleio.cpp
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CSV_READER_WRITER/: CMakeLists.txt
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CSV_READER_WRITER/INCLUDE/: tools_csv_reader.h  tools_csv_writer.h
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/CSV_READER_WRITER/SRC_CPP/: tools_csv_reader.cpp  tools_csv_writer.cpp
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/RANDOM_GENERATOR/: CMakeLists.txt
Genshin-Impact-Team-Selector/TOOLS_LIBRARY/RANDOM_GENERATOR/INCLUDE/: tools_randomgenerator.h
GenshinImpact_team_selector/datas/: global_characters.txt  global_teams.txt  my_characters.txt
GenshinImpact_team_selector/src/: box.cpp  character.cpp  main.cpp  (+5 more)
old_GenshinImpact_team_selector/: Makefile
(+6 files in other folders)
